terraform/templates/deploy_efs_storageclaim.yaml
# This is a customised template, more details at:
# https://github.com/kubernetes-incubator/external-storage/tree/master/aws/efs

---
# ------------------- EFS Deployment ------------------- #

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: efs-provisioner
  namespace: ${namespace_system}
spec:
  replicas: 1
  strategy:
    type: Recreate 
  template:
    metadata:
      labels:
        app: efs-provisioner
    spec:
      containers:
        - name: efs-provisioner
          image: quay.io/external_storage/efs-provisioner:latest
          volumeMounts:
            - name: pv-volume
              mountPath: /persistentvolumes
      volumes:
        - name: pv-volume
          nfs:
            server: ${kube_efs_dns}
            path: /
