terraform/templates/deploy_demo_nginx.yaml
# This is a customised demo, more details at:
# https://docs.docker.com/ee/ucp/kubernetes/

---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: nginx-demo-deployment
  namespace: ${namespace_public}
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: ${namespace_public}
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 32004
  selector:
    app: nginx
