terraform/templates/deploy_demo_letsencrypt.yaml
# This is a customised demo, more details at:
# https://runnable.com/blog/how-to-use-lets-encrypt-on-kubernetes

---
# ------------------- nginx Deployment ------------------- #
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: ${namespace_public}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-configs
          mountPath: /etc/nginx/conf.d
      # Load the configuration files for nginx
      volumes:
        - name: nginx-configs
          configMap:
            name: nginx-config

---
# ------------------- nginx Service ------------------- #
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: ${namespace_public}
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - protocol: "TCP"
    port: 80
    nodePort: ${ingress_port_http}

---
# ------------------- nginx Ingress ------------------- #
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "kubernetes-demo-app-ingress-service"
  namespace: ${namespace_public}
spec:
  tls:
  - hosts:
    - ${url_letsencrypt}.${domain} # Your host. CHANGE ME
    secretName: letsencrypt-certs # Name of the secret
  rules:
  - host: ${url_letsencrypt}.${domain} # CHANGE ME!
    http:
      paths:
      # The * is needed so that all traffic gets redirected to nginx
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80

---
# ------------------- letsencrypt Service ------------------- #
apiVersion: v1
kind: Service
metadata:
  name: letsencrypt
  namespace: ${namespace_public}
spec:
  selector:
    app: letsencrypt
  ports:
  - protocol: "TCP"
    port: 80
