terraform/templates/deploy_demo_traefik_whoami_app.yaml
## Traefik Demo for whoami app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: whoami-deployment
  namespace: ${namespace_public}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami-container
        image: containous/whoami
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: ${namespace_public}
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: ${namespace_public}
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: ${url_app}.${dns_domain_public}
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami-service
          servicePort: http
